--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,16 +14,10 @@ Depends: R (>= 3.0.0),
 Imports: ade4, 
         beeswarm, 
         ggplot2,
-		graphics,
-		grid,
         Hmisc, 
-        knitr,
         phangorn, 
         phytools, 
-		png,
         pryr, 
-		rmarkdown,
-        scales,
-		stats
+        scales
 VignetteBuilder: knitr
 Encoding: UTF-8
